3e tp : design pattern factory avec yml et & reflection; singleton